syntax = "proto3";

package job.v1;

option go_package = "github.com/chefnext/chefnext/apps/api/internal/gen/job/v1;jobv1";

service JobService {
  rpc CreateJob(CreateJobRequest) returns (CreateJobResponse);
  rpc UpdateJob(UpdateJobRequest) returns (UpdateJobResponse);
  rpc GetJob(GetJobRequest) returns (GetJobResponse);
  rpc ListMyJobs(ListMyJobsRequest) returns (ListMyJobsResponse);
  rpc SearchJobs(SearchJobsRequest) returns (SearchJobsResponse);
  rpc CreateApplication(CreateApplicationRequest) returns (CreateApplicationResponse);
  rpc ListApplicationsForChef(ListApplicationsForChefRequest) returns (ListApplicationsForChefResponse);
  rpc ListApplicationsForRestaurant(ListApplicationsForRestaurantRequest) returns (ListApplicationsForRestaurantResponse);
  rpc UpdateApplicationStatus(UpdateApplicationStatusRequest) returns (UpdateApplicationStatusResponse);
}

message RestaurantSummary {
  string id = 1;
  string display_name = 2;
  string tagline = 3;
  string location = 4;
}

message Job {
  string id = 1;
  string restaurant_id = 2;
  RestaurantSummary restaurant = 3;
  string title = 4;
  string description = 5;
  repeated string required_skills = 6;
  string location = 7;
  string salary_range = 8;
  string employment_type = 9;
  JobStatus status = 10;
  string metadata_json = 11;
  string created_at = 12;
  string updated_at = 13;
}

enum JobStatus {
  JOB_STATUS_UNSPECIFIED = 0;
  JOB_STATUS_DRAFT = 1;
  JOB_STATUS_PUBLISHED = 2;
  JOB_STATUS_CLOSED = 3;
}

enum ApplicationStatus {
  APPLICATION_STATUS_UNSPECIFIED = 0;
  APPLICATION_STATUS_PENDING = 1;
  APPLICATION_STATUS_ACCEPTED = 2;
  APPLICATION_STATUS_REJECTED = 3;
}

message JobSummary {
  string id = 1;
  string title = 2;
  JobStatus status = 3;
  string restaurant_name = 4;
}

message ChefSummary {
  string profile_id = 1;
  string full_name = 2;
  string location = 3;
}

message JobApplication {
  string id = 1;
  string job_id = 2;
  string chef_profile_id = 3;
  ApplicationStatus status = 4;
  string cover_letter = 5;
  string created_at = 6;
  string updated_at = 7;
  JobSummary job = 8;
  ChefSummary chef = 9;
}

message CreateJobRequest {
  string title = 1;
  string description = 2;
  repeated string required_skills = 3;
  string location = 4;
  string salary_range = 5;
  string employment_type = 6;
  JobStatus status = 7;
  string metadata_json = 8;
}

message CreateJobResponse {
  Job job = 1;
}

message UpdateJobRequest {
  string job_id = 1;
  string title = 2;
  string description = 3;
  repeated string required_skills = 4;
  string location = 5;
  string salary_range = 6;
  string employment_type = 7;
  JobStatus status = 8;
  string metadata_json = 9;
}

message UpdateJobResponse {
  Job job = 1;
}

message GetJobRequest {
  string job_id = 1;
}

message GetJobResponse {
  Job job = 1;
}

message ListMyJobsRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message ListMyJobsResponse {
  repeated Job jobs = 1;
  int64 total_count = 2;
}

message SearchJobsRequest {
  string keyword = 1;
  repeated string required_skills = 2;
  string location = 3;
  int32 limit = 4;
  int32 offset = 5;
}

message SearchJobsResponse {
  repeated Job jobs = 1;
  int64 total_count = 2;
}

message CreateApplicationRequest {
  string job_id = 1;
  string cover_letter = 2;
}

message CreateApplicationResponse {
  JobApplication application = 1;
}

message ListApplicationsForChefRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message ListApplicationsForChefResponse {
  repeated JobApplication applications = 1;
}

message ListApplicationsForRestaurantRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message ListApplicationsForRestaurantResponse {
  repeated JobApplication applications = 1;
}

message UpdateApplicationStatusRequest {
  string application_id = 1;
  ApplicationStatus status = 2;
}

message UpdateApplicationStatusResponse {
  JobApplication application = 1;
}
